--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 fastapi
 uvicorn[standard]
 sqlalchemy>=2.0.36
+alembic>=1.14.0
 python-jose[cryptography]>=3.3.0
 pytest>=8.3.3
+pytest-cov>=6.0.0
 httpx>=0.28.1
-bcrypt>=5.0.0
+passlib[bcrypt]>=1.7.4
+bcrypt==4.0.1
+python-dotenv>=1.0.1
+psycopg[binary]>=3.2.1
