Harden production security and session flow with refresh cookie

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@ LOJACONTROL_JWT_SECRET=change-this-secret
 LOJACONTROL_JWT_ALGORITHM=HS256
 LOJACONTROL_ACCESS_TOKEN_EXPIRE_MINUTES=720
 LOJACONTROL_REFRESH_TOKEN_EXPIRE_DAYS=14
-LOJACONTROL_CORS_ORIGINS=*
+LOJACONTROL_CORS_ORIGINS=http://127.0.0.1:8000,http://localhost:8000
+LOJACONTROL_REFRESH_COOKIE_NAME=lc_refresh_token
 LOJACONTROL_SKIP_LEGACY_IMPORT=0
 LOJACONTROL_LOG_LEVEL=INFO
 LOJACONTROL_LOG_FILE=./logs/app.log
