--- a/.env.production.example
+++ b/.env.production.example
@@ -5,6 +5,7 @@ LOJACONTROL_JWT_ALGORITHM=HS256
 LOJACONTROL_ACCESS_TOKEN_EXPIRE_MINUTES=30
 LOJACONTROL_REFRESH_TOKEN_EXPIRE_DAYS=14
 LOJACONTROL_CORS_ORIGINS=https://seu-frontend.com
+LOJACONTROL_REFRESH_COOKIE_NAME=lc_refresh_token
 LOJACONTROL_SKIP_LEGACY_IMPORT=1
 LOJACONTROL_LOG_LEVEL=INFO
 LOJACONTROL_LOG_FILE=./logs/app.log
