--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,19 +19,22 @@ services:
   app:
     build: .
     container_name: lojacontrol_app
+    command: sh -c "alembic upgrade head && uvicorn testebackend:app --host 0.0.0.0 --port 8000"
     depends_on:
       db:
         condition: service_healthy
     environment:
       LOJACONTROL_ENV: production
       LOJACONTROL_DATABASE_URL: postgresql+psycopg://lojacontrol:lojacontrol@db:5432/lojacontrol
-      LOJACONTROL_JWT_SECRET: change-this-secret-in-production
+      LOJACONTROL_JWT_SECRET: ReplaceWithLongRandomSecret_AtLeast32Chars
       LOJACONTROL_JWT_ALGORITHM: HS256
       LOJACONTROL_ACCESS_TOKEN_EXPIRE_MINUTES: 30
       LOJACONTROL_REFRESH_TOKEN_EXPIRE_DAYS: 14
+      LOJACONTROL_REFRESH_COOKIE_NAME: lc_refresh_token
       LOJACONTROL_CORS_ORIGINS: http://localhost:8000
+      LOJACONTROL_AUTO_CREATE_SCHEMA: 0
       LOJA_ADMIN_EMAIL: admin@lojacontrol.local
-      LOJA_ADMIN_PASSWORD: admin123
+      LOJA_ADMIN_PASSWORD: ChangeMe_Prod_123
     ports:
       - "8000:8000"
 
